Delivery Options font size change

--- a/views/quote.ejs
+++ b/views/quote.ejs
@@ -73,7 +73,7 @@
           <button
             type="button"
             class="btn btn-lg btn-block btn-outline-primary"
-            style="bottom: 1rem;"
+            style="bottom: 1rem; background-color: #00538b; color: white;"
             id="continueToOpen"
           >
             Select Open Trailer
@@ -139,7 +139,7 @@
                     name="selection"
                     value="Open Standard"
                   />
-                  <label for="openstandard">$<%= openstandard %></label>
+                  <label style="font-size: 50px;" for="openstandard">$<%= openstandard %></label>
                 </h1>  
                 <label>Deliver By: <%= standardDeliverBy %></label>
               </div>
@@ -156,7 +156,7 @@
                   name="selection"
                   value="Open Premium"
                   />
-                  <label for="openpremium">$<%= openpremium %></label>
+                  <label style="font-size: 50px;" for="openpremium">$<%= openpremium %></label>
                 </h1>
                 <label>Deliver By: <%= premiumDeliverBy %></label>
               </div>
@@ -173,7 +173,7 @@
                 name="selection"
                 value="Open Express"
                 />
-                <label for="openexpress">Express $<%= openexpress %></label>
+                <label style="font-size: 50px;" for="openexpress">$<%= openexpress %></label>
               </h1>  
                 <label>Deliver By: <%= expressDeliverBy %></label>
             </div>
@@ -193,7 +193,7 @@
                     name="selection"
                     value="Enclosed Standard"
                     />
-                    <label for="enclosedstandard"
+                    <label style="font-size: 50px;" for="enclosedstandard"
                       >$<%= enclosedstandard %></label
                     >
                   </h1>
@@ -212,7 +212,7 @@
                     name="selection"
                     value="Enclosed Premium"
                   />
-                  <label for="enclosedpremium">$<%= enclosedpremium %></label>
+                  <label style="font-size: 50px;" for="enclosedpremium">$<%= enclosedpremium %></label>
                 </h1>
                 <label>Deliver By: <%= premiumDeliverBy %></label>
               </div>
@@ -229,7 +229,7 @@
                     name="selection"
                     value="Enclosed Express"
                   />
-                  <label for="enclosedexpress">$<%= enclosedexpress %></label>
+                  <label style="font-size: 50px;" for="enclosedexpress">$<%= enclosedexpress %></label>
                 </h1>
                 <label>Deliver By: <%= expressDeliverBy %></label>
               </div>
@@ -239,10 +239,10 @@
       </div>
       <div class="proceed-to-summary">
         <button
-          class="btn btn-primary btn-lg"
           type="submit"
           class="proceed-to-summary-button btn btn-lg"
           id="summary-button"
+          style="background-color: #00538b; color: white;"
         >
           Proceed to Summary
         </button>
