--- a/views/quote.ejs
+++ b/views/quote.ejs
@@ -72,7 +72,7 @@
           </h1>
           <button
             type="button"
-            class="btn btn-lg btn-block btn-outline-primary"
+            class="btn btn-lg btn-block btn-outline-primary select-open-trailer"
             style="bottom: 1rem; background-color: #00538b; color: white;"
             id="continueToOpen"
           >
@@ -106,7 +106,7 @@
           </h1>
           <button
             type="button"
-            class="btn btn-lg btn-block btn-primary"
+            class="btn btn-lg btn-block btn-primary select-enclosed-trailer"
             id="selectEnclosed"
             style="color: white; background-color: #00538b;"
           >
