--- a/views/quote.ejs
+++ b/views/quote.ejs
@@ -180,7 +180,7 @@
             </div>
           </div>    
         </div>
-        <div class="row">
+        
           <div class="col-md-4 order-md-2 mb-4">
             <h4 class="d-flex justify-content-between align-items-center mb-3">
               <span class="text-muted">Your current selection</span>
@@ -195,9 +195,9 @@
               </li>
             </ul>
           </div>
-        </div>
+        
         <div class="container">
-          <div class="card-deck mb-3 text-center" id="enclosedShipping">
+          <!-- <div class="card-deck mb-3 text-center" id="enclosedShipping">
             <div class="card mb-4 shadow-sm">
                 <div class="card-header">
                   <h4 class="my-0 font-weight-normal">Standard</h4>
@@ -216,7 +216,7 @@
                   </h1>
                   <label>Deliver By: <%= standardDeliverBy %></label>
                 </div>
-            </div>
+            </div> -->
             <div class="card mb-4 shadow-sm">
               <div class="card-header">
                 <h4 class="my-0 font-weight-normal">Premium</h4>
