--- a/views/thankyou.ejs
+++ b/views/thankyou.ejs
@@ -1,9 +1,19 @@
 <%- include("header") -%>
 
-
-
-
-
-
-
+<script type="text/javascript"></script>
+<div class="container checkout-summary">
+  <div class="card-deck mb-3 text-center">
+    <div class="card mb-4 shadow-sm">
+      <div class="card-header">
+        <h4 class="my-0 font-weight-normal">Thank You</h4>
+      </div>
+      <div class="card-body summary-body">
+        <h1 class="card-title pricing-card-title">
+          Your order has been received. We have emailed the purchase receipt to
+          you.
+        </h1>
+      </div>
+    </div>
+  </div>
+</div>
 <%- include("footer") -%>
