--- a/views/form.ejs
+++ b/views/form.ejs
@@ -1,5 +1,7 @@
 <%- include("header") -%>
 
+<script type="text/javascript"
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD-aid-nL-8Siq0uvQUG4I0UEWWJLoSlmc&libraries=places"></script>
 <script type="text/javascript" src="https://www.carqueryapi.com/js/jquery.min.js"></script>
 <script type="text/javascript" src="https://www.carqueryapi.com/js/carquery.0.3.4.js"></script>
 <script type="text/javascript">
@@ -10,15 +12,32 @@
         carquery.initYearMakeModelTrim('car-years', 'car-makes', 'car-models', 'car-model-trims');
 
         //Set onclick function for the US filter checkbox and show data button
-        $('#cq-sold-in-us').click(function () { carquery.setFilters({ sold_in_us: this.checked }); });
-        $('#cq-show-data').click(function () { carquery.populateCarData('car-model-data'); });
+        $('#cq-sold-in-us').click(function () {
+            carquery.setFilters({
+                sold_in_us: this.checked
+            });
+        });
+        $('#cq-show-data').click(function () {
+            carquery.populateCarData('car-model-data');
+        });
 
         // set the minimum date to tomorrow
         var tomorrow = new Date();
         tomorrow.setDate(new Date().getDate() + 1);
         document.getElementById("date-available").setAttribute('min', tomorrow.toISOString().split('T')[0]);
+
+        //Retrieve autocomplete predictions
+        function initialize() {
+            var input = document.getElementById('origins');
+            var input2 = document.getElementById('destinations');
+            new google.maps.places.Autocomplete(input);
+            new google.maps.places.Autocomplete(input2);
+        }
+
+        google.maps.event.addDomListener(window, 'load', initialize);
     });
 </script>
+
 
 <div class="container">
     <div class="px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
@@ -68,6 +87,7 @@
             </div>
     </div>
     </form>
+    <div id="map"></div>
 </div>
 </div>
 
