--- a/views/form.ejs
+++ b/views/form.ejs
@@ -26,7 +26,7 @@
         tomorrow.setDate(new Date().getDate() + 1);
         document.getElementById("date-available").setAttribute('min', tomorrow.toISOString().split('T')[0]);
 
-        //Retrieve autocomplete predictions
+        //Retrieve autocomplete predictions for origin and destination inputs
         function initialize() {
             var input = document.getElementById('origins');
             var input2 = document.getElementById('destinations');
@@ -82,6 +82,40 @@
                 <label for="car-model-trims">Date Available</label>
                 <input class="custom-select" type="date" id="date-available" name="date-available" required>
             </div>
+            <div class="col col-12 col-md-3" style="float: right">
+                <label for="add-vehicle">Add vehcile</label>
+                <button type="button" name="add-vehicle"><i class="fas fa-plus" style="color: white;"></i></button>
+            </div>
+            <table class="table table-dark">
+                <thead>
+                    <tr>
+                        <th scope="col">Year</th>
+                        <th scope="col">Make</th>
+                        <th scope="col">Model</th>
+                        <th scope="col">Trim</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th scope="row">2012</th>
+                        <td>Jeep</td>
+                        <td>Ford</td>
+                        <td>Chrysler</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">2019</th>
+                        <td>Jeep</td>
+                        <td>Ford</td>
+                        <td>Chrysler</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">2020</th>
+                        <td>Wrangler</td>
+                        <td>Bronco</td>
+                        <td>300</td>
+                    </tr>
+                </tbody>
+            </table>
             <div class="col col-12 form-button">
                 <button class="btn btn-lg get-quote-button" type="submit">Get Quote!</button>
             </div>
